--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
             android:name=".feature.todolist.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.TodoList.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
+            android:theme="@style/Theme.TodoList.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
