--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,9 @@ dependencies {
 
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
+
+
+    // Accompanist
+    implementation 'com.google.accompanist:accompanist-insets:0.21.4-beta'
+
 }
