--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,5 +94,6 @@ dependencies {
     // Accompanist
     implementation "com.google.accompanist:accompanist-insets:$accompanist_version"
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
 
 }
