--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,4 +106,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
+
+    // WorkManager
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 }
