--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.1.0-beta02'
+        compose_version = "1.1.0-rc01"
         room_version = "2.4.0-beta02"
         accompanist_version = "0.21.4-beta"
     }
@@ -11,7 +11,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
